test_case/rust-lang_rust/2478_18234872.rs

fn foo<'a>() -> &'a int {  //~ ERROR unconstrained region
    return &x;
}
static x: int = 5;
fn main() {}
